# Demon

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LANGUAGE_RULES.md  README.md  REORGANIZATION_PLAN.md  build-linux.sh  build-windows.ps1  index.html  install.bat  install.sh  run.py  setup.py
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  BYTECODE_FUTURE.md  COMPILATION_PROCESS.md  DATA_STRUCTURES.md  EXAMPLES.md  EXCEPTION_HANDLING.md  FILE_ORGANIZATION.md  IMPLEMENTATION.md  PYTHON_RATIONALE.md  STATIC_METHODS.md
examples/: README.md  calculator.demon  classes.dm  control_flow.dm  debug_test.demon  factorial.demon  features.dm  fibonacci.demon  fibonacci.dm  full_test.dm  functions.dm  hello.demon  inheritance.dm  logical_operators.dm  memory_test.dm  stdlib_demo.demon  stdlib_demo_enhanced.demon  test_type_checker.demon  variables.dm
examples/advanced/: advanced_algorithms_demo.demon  advanced_data_structures_demo.demon  algorithms_demo.demon  all_algorithms_demo.demon  array_indexing.demon  array_indexing_fixed.demon  bst_demo.demon  bst_simple.demon  bst_test.demon  closures.demon  combined_demo.demon  complete_demo.demon  data_structures_demo.demon  design_patterns_demo.demon  dict_test.demon  exception_handling.demon  exception_handling_demo.demon  execution_demo.demon  functional.demon  functional_demo.demon  graph_api_demo.demon  (+26 more)
src/: README.md  __init__.py  demon.py  demon_ast.py  demon_cli.py  error.rs  interpreter.py  interpreter.py.bak  interpreter.py.new  lib.rs  main.py  main.rs  parser.py  resolver.py  stdlib.py  tokens.py  type_checker.py
(+97 files in other folders)
